--- a/src/discrete-layer/components/layer-details/entity-dialog.css
+++ b/src/discrete-layer/components/layer-details/entity-dialog.css
@@ -1,4 +1,4 @@
-@media (min-width: 700px) {
+@media (min-width: 800px) {
   #entityDialog .mdc-dialog .mdc-dialog__surface {
     max-width: 728px;
   }
